206: Fix wrapped nav styles

--- a/themes/shiro/assets/src/sass/components/_nav-search.scss
+++ b/themes/shiro/assets/src/sass/components/_nav-search.scss
@@ -7,7 +7,9 @@
 	width: 100%;
 
 	@media ( min-width: #{$medium-landscape} ) {
+		align-self: flex-start;
 		flex: 0 0 rem(220);
+		margin-top: rem(12);
 	}
 
 	[data-dropdown-status="uninitialized"] & {
